--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		</script>
 		<style>
 			body, html {
-			  background-color: red;
+        color: white;
+			  background-color: #9586c4;
 			  height: 100%;
 			}
 		</style>
