Change title color

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 		</script>
 		<style>
 			body, html {
-			  color: white;
 			  background-color: #9586c4;
 			  height: 100%;
+			}
+			.title [
+				color: white;
 			}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
