--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			body, html {
 			  background-color: #9586c4;
 			  height: 100%;
-			}
-			.title [
-				color: white;
+				.title {
+					color: white
+				}
 			}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
