--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<title>joninhas meu amorzinho</title>
+		<title>test</title>
 		<script>
 			function funcNo() {
 				const elem = document.getElementById("buttonNo");
